# show-the-flow

./: .env  .flake8  .gitignore  Dockerfile  LICENSE  README.md  config.yml  docker-compose.yml  pyproject.toml  start.sh
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: codeql.yml  hadolint.yml  publish.yml  publishing.yml  test.yml  testing.yml
assets/: input_table.css  labeled_input.css  optional_input.css  sft.css  unitable_input.css
datasets/: sample.csv
notebooks/: colorscales.py  requests.http  sankey_chart.py
stf/: __init__.py  dependency_configurator.py
stf/adapters/: __init__.py  fake_redis_chart_data_cache.py  redis_chart_data_cache.py
stf/dash_components/: __init__.py  application.py  base_component.py  components.py  constants.py  input_table.py  labeled_input.py  main_panel.py  optional_input.py  sidebar.py  unitable_input.py
stf/dash_pages/sankey_graph/: __init__.py  constants.py  main_panel.py  sankey_graph.py  sidebar.py
stf/domain/: __init__.py  utils.py
stf/domain/colors/: __init__.py  colors.py  colorscale.py
stf/domain/datasets/: __init__.py  cached_dataset_view.py
stf/domain/dto/: __init__.py  sankey_dto.py
stf/domain/ports/: DataframeCache.py  __init__.py
stf/domain/sankey/: __init__.py  sankey.py  sankey_components.py  utils.py
stf/dto/: __init__.py  sankey_dto.py
stf/entrypoints/: __init__.py  api.py  app.py  dash_app.py
stf/entrypoints/dash_app/: app.py
stf/entrypoints/dash_app/components/: __init__.py  input_table.py  labeled_input.py  optional_input.py  unitable_input.py
stf/entrypoints/dash_app/pages/sankey_graph/: __init__.py  sankey_graph.py
stf/sankey/: __init__.py  sankey.py  sankey_components.py  utils.py
stf/services/: __init__.py  chart_service.py  dataset_service.py
tests/: conftest.py
tests/test_dash_components/: test_unit_aio_labeled_input.py  test_unit_aio_optional_input.py  test_unit_aio_table_input.py  test_unit_aio_unitable_input.py  test_unit_base_component.py
tests/utils/: constants.py
