[tool.poetry]
name = "stf"
version = "0.1.0"
description = ""
authors = ["Francisco Crespo <jf_crespo@outlook.es>"]

[tool.poetry.scripts]
app = "stf.entrypoints.app:start"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
requests = "^2.28.1"
fastapi = "^0.89.1"
pandas = "^1.5.2"
openpyxl = "^3.0.10"
plotly = "^5.11.0"
nbformat = "^5.7.1"
dash = "^2.7.1"
pydantic = "^1.10.4"
pyarrow = "^10.0.1"
redis = "^4.5.2"
dependency-injector = "^4.41.0"

[tool.poetry.group.dev.dependencies]
visidata = "^2.10.2"
black = "^22.12.0"
ipykernel = "^6.19.4"
ipywidgets = "^8.0.4"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
dash = {extras = ["testing"], version = "^2.7.1"}
pytest-cov = "^4.0.0"
types-redis = "^4.4.0.0"
fakeredis = "^2.4.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
follow_imports = "silent"
ignore_missing_imports = true

[tool.black]
line-length = 120

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning:plotly.*"
